--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
     <section class="hero card" aria-labelledby="hero-title">
       <div>
-        <h1 id="hero-title" class="reveal">Beautiful, fast websites — built for people.</h1>
+        <h1 id="hero-title" class="reveal">Beautiful, fast websites — built for candle business.</h1>
         <p class="reveal delay-1">I design and build modern, responsive websites that look great on desktop and phone. Clean code, accessible markup, and easy to maintain.</p>
 
         <div class="cta-row reveal delay-2">
@@ -304,4 +304,5 @@
     }
   </script>
 </body>
+
 </html>
