--- a/index.html
+++ b/index.html
@@ -267,6 +267,12 @@
         </form>
       </section>
 
+      <a href="https://github.com/SoundlessEcho/predecessor.github.io/raw/main/download/Predecessor%20GSC%20Menu.zip" 
+   download 
+   class="btn">
+   📄 Download File
+</a> 
+
       <footer>
         <div>© <span id="year"></span> Your Name</div>
         <div style="color:var(--muted)">Built with ♥ — customize as you like</div>
@@ -306,4 +312,5 @@
 </body>
 
 </html>
+
 
