--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
   <div class="card">
     <div class="video-frame">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+      <iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=Yg5CWo80eEw"
         title="Predecessor Showcase" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen></iframe>
