--- a/showcase.html
+++ b/showcase.html
@@ -32,19 +32,27 @@
 
 <h1>Showcase</h1>
 <p>Clips and screenshots of HUD animations, loaders, and menu base. Click any image to open the lightbox.</p>
+
 <div class="video-frame" style="margin-bottom:12px">
-  <video controls preload="metadata" width="100%" height="100%">
-    <source src="assets/showcase/sample.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+  <iframe width="100%" height="100%" 
+    src="https://www.youtube.com/embed/Yg5CWo80eEw"
+    title="Predecessor Showcase"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen></iframe>
 </div>
+
 <div class="lightbox-grid">
-  <img src="https://picsum.photos/seed/pred1/640/360" alt="Preview 1">
-  <img src="https://picsum.photos/seed/pred2/640/360" alt="Preview 2">
-  <img src="https://picsum.photos/seed/pred3/640/360" alt="Preview 3">
-  <img src="https://picsum.photos/seed/pred4/640/360" alt="Preview 4">
+  <img src="assets/image/sample.png" alt="Preview 1">
+  <img src="assets/image/sample.png" alt="Preview 2">
+  <img src="assets/image/sample.png" alt="Preview 3">
+  <img src="assets/image/sample.png" alt="Preview 4">
 </div>
-<p class="muted">Replace the demo video (<code>assets/showcase/sample.mp4</code>) and preview images with your own media.</p>
+
+<p class="muted">
+  Showcase video is now embedded from YouTube.  
+  All preview images are pulled directly from your GitHub path (<code>assets/image/sample.png</code>).
+</p>
 
 </main>
 <footer>
@@ -73,3 +81,4 @@
 <script src="assets/js/main.js"></script>
 </body>
 </html>
+
