--- a/showcase.html
+++ b/showcase.html
@@ -43,7 +43,7 @@
 </div>
 
 <div class="lightbox-grid">
-  <img src="assets/image/sample.png" alt="Preview 1">
+  <img src="assets/image/image1.png" alt="Preview 1">
   <img src="assets/image/sample.png" alt="Preview 2">
   <img src="assets/image/sample.png" alt="Preview 3">
   <img src="assets/image/sample.png" alt="Preview 4">
