--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen></iframe>
     </div>
-    <p class="muted">Developer Kit GSC menu supporting most Call of Dut titles. Perfect for Beginners — No Coding Experience Required. Start your journey today and gain access to the most advanced menu base in the modding community. Unlock endless creative possibilities.</p>
+    <p class="muted">Developer Kit GSC menu supporting most Call of Duty titles. Perfect for Beginners — No Coding Experience Required. Start your journey today and gain access to the most advanced menu base in the modding community. Unlock endless creative possibilities.</p>
   </div>
 </section>
 
