--- a/showcase.html
+++ b/showcase.html
@@ -35,7 +35,7 @@
 
 <div class="video-frame" style="margin-bottom:12px">
   <iframe width="100%" height="100%" 
-    src="https://www.youtube.com/embed/Yg5CWo80eEw"
+    src="https://www.youtube.com/embed/ehjO6XsgLu0"
     title="Predecessor Showcase"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
