--- a/index.html
+++ b/index.html
@@ -75,10 +75,14 @@
         </p>
       </div>
       <div>
-        <h3>Community</h3>
-        <p><a href="#" aria-disabled="true">Discord (add your invite)</a><br>
-           <a href="https://github.com/SoundlessEcho" target="_blank" rel="noopener">GitHub</a></p>
-      </div>
+  <h3>Community</h3>
+  <p>
+    <a href="https://discord.com/invite/WznQZdT" target="_blank" rel="noopener">Discord</a><br>
+    <a href="https://www.youtube.com/@SoundlessEcho" target="_blank" rel="noopener">YouTube</a><br>
+    <a href="https://github.com/SoundlessEcho" target="_blank" rel="noopener">GitHub</a>
+  </p>
+</div>
+
     </div>
     <p class="muted">© 2025 Predecessor. All rights reserved.</p>
   </div>
