--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <section class="hero">
   <div class="card">
-    <h1>Predecessor!!!!!!!!!!</h1>
+    <h1>Predecessor</h1>
     <p>Elite <strong>Call of Duty GSC</strong> modding tools, HUD effects, loaders, and documentation — crafted for speed, stability, and style.</p>
     <p class="kv">
       <span>GSC HUD FX</span><span>Menu Base</span><span>Loader</span><span>Docs</span><span>Releases</span>
