--- a/downloads.html
+++ b/downloads.html
@@ -54,8 +54,11 @@
       </div>
       <div>
         <h3>Community</h3>
-        <p><a href="#" aria-disabled="true">Discord (add your invite)</a><br>
-           <a href="https://github.com/SoundlessEcho" target="_blank" rel="noopener">GitHub</a></p>
+        <p>
+          <a href="https://discord.com/invite/WznQZdT" target="_blank" rel="noopener">Discord</a><br>
+          <a href="https://www.youtube.com/@SoundlessEcho" target="_blank" rel="noopener">YouTube</a><br>
+          <a href="https://github.com/SoundlessEcho" target="_blank" rel="noopener">GitHub</a>
+        </p>
       </div>
     </div>
     <p class="muted">© 2025 Predecessor. All rights reserved.</p>
