--- a/showcase.html
+++ b/showcase.html
@@ -1,1 +1,84 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>Showcase</title></head><body><h1>Showcase Page</h1></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Predecessor • Showcase</title>
+  <meta name="description" content="Predecessor — Advanced Call of Duty GSC modding environment with HUD FX, loaders, docs, and downloads." />
+  <link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg" />
+  <link rel="preload" href="assets/img/logo.svg" as="image">
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
+<header>
+  <div class="container" style="display:flex;align-items:center;gap:18px;justify-content:space-between;">
+    <div class="brand">
+      <a href="index.html" aria-label="Home">
+        <img src="assets/img/logo.svg" alt="Predecessor Logo">
+      </a>
+    </div>
+    <nav>
+      <div class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="downloads.html">Downloads</a>
+        <a href="showcase.html">Showcase</a>
+        <a href="docs.html">Docs</a>
+        <a href="contact.html">Contact</a>
+      </div>
+    </nav>
+  </div>
+</header>
+<main class="container">
+
+<h1>Showcase</h1>
+<p>Clips and screenshots of HUD animations, loaders, and menu base. Click any image to open the lightbox.</p>
+
+<div class="video-frame" style="margin-bottom:12px">
+  <iframe width="100%" height="100%" 
+    src="https://www.youtube.com/embed/ehjO6XsgLu0"
+    title="Predecessor Showcase"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen></iframe>
+</div>
+
+<div class="lightbox-grid">
+  <img src="assets/image/image1.png" alt="Preview 1">
+</div>
+
+<p class="muted">
+  Showcase video is now embedded from YouTube.  
+  All preview images are pulled directly from your GitHub path (<code>assets/image/sample.png</code>).
+</p>
+
+</main>
+<footer>
+  <div class="container">
+    <div class="grid">
+      <div>
+        <h3>Predecessor</h3>
+        <p class="muted">Advanced GSC modding hub by SoundlessEcho — loaders, HUD FX, docs, and releases.</p>
+      </div>
+      <div>
+        <h3>Links</h3>
+        <p><a href="downloads.html">Latest Release</a><br>
+           <a href="docs.html">Documentation</a><br>
+           <a href="showcase.html">Media</a>
+        </p>
+      </div>
+      <div>
+        <h3>Community</h3>
+        <p>
+          <a href="https://discord.com/invite/WznQZdT" target="_blank" rel="noopener">Discord</a><br>
+          <a href="https://www.youtube.com/@SoundlessEcho" target="_blank" rel="noopener">YouTube</a><br>
+          <a href="https://github.com/SoundlessEcho" target="_blank" rel="noopener">GitHub</a>
+        </p>
+      </div>
+    </div>
+    <p class="muted">© 2025 Predecessor. All rights reserved.</p>
+  </div>
+</footer>
+<script src="assets/js/main.js"></script>
+</body>
+</html>
+
