--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <a href="downloads.html">Downloads</a>
         <a href="showcase.html">Showcase</a>
         <a href="docs.html">Docs</a>
+        <a href="store.html">Store</a>
         <a href="contact.html">Contact</a>
       </div>
     </nav>
