--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="downloads.html">Downloads</a>
         <a href="showcase.html">Showcase</a>
         <a href="store.html">Store</a>
-        <a href="contact.html">Contact</a>
+        <a href="about.html">About Me</a>
       </div>
     </nav>
   </div>
