--- a/showcase.html
+++ b/showcase.html
@@ -22,8 +22,8 @@
         <a href="index.html">Home</a>
         <a href="downloads.html">Downloads</a>
         <a href="showcase.html">Showcase</a>
-        <a href="docs.html">Docs</a>
-        <a href="contact.html">Contact</a>
+        <a href="store.html">Store</a>
+        <a href="about.html">About Me</a>
       </div>
     </nav>
   </div>
