--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <a href="index.html">Home</a>
         <a href="downloads.html">Downloads</a>
         <a href="showcase.html">Showcase</a>
-        <a href="docs.html">Docs</a>
+        <a href="store.html">Store</a>
         <a href="about.html">About Me</a>
       </div>
     </nav>
