--- a/downloads.html
+++ b/downloads.html
@@ -48,7 +48,7 @@
       <div>
         <h3>Links</h3>
         <p><a href="downloads.html">Latest Release</a><br>
-           <a href="docs.html">Documentation</a><br>
+           <a href="store.html">Check Product</a><br>
            <a href="showcase.html">Media</a>
         </p>
       </div>
