--- a/downloads.html
+++ b/downloads.html
@@ -47,7 +47,7 @@
       </div>
       <div>
         <h3>Links</h3>
-        <p><a href="downloads.html">Latest Release</a><br>
+        <p><a href="about.html">About Me</a><br>
            <a href="store.html">Check Product</a><br>
            <a href="showcase.html">Media</a>
         </p>
