--- a/showcase.html
+++ b/showcase.html
@@ -63,7 +63,7 @@
         <h3>Links</h3>
         <p><a href="downloads.html">Latest Release</a><br>
            <a href="store.html">Check Product</a><br>
-           <a href="showcase.html">Media</a>
+           <a href="about.html">About Me</a>
         </p>
       </div>
       <div>
