--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Predecessor • Contact</title>
-  <meta name="description" content="Predecessor — Advanced Call of Duty GSC modding environment with HUD FX, loaders, docs, and downloads." />
+  <title>Predecessor • About Me</title>
+  <meta name="description" content="About SoundlessEcho — Developer, modder, and creator of the Predecessor modding suite." />
   <link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg" />
   <link rel="preload" href="assets/img/logo.svg" as="image">
   <link rel="stylesheet" href="assets/css/style.css" />
@@ -23,41 +23,27 @@
         <a href="downloads.html">Downloads</a>
         <a href="showcase.html">Showcase</a>
         <a href="store.html">Store</a>
-        <a href="about.html">About Me</a>
+        <a href="about.html" class="active">About Me</a>
       </div>
     </nav>
   </div>
 </header>
+
 <main class="container">
-
-<h1>Contact</h1>
-<p>Use the form below. This uses <a href="https://formspree.io" target="_blank" rel="noopener">Formspree</a> — replace the action URL with your own endpoint.</p>
-<form action="https://formspree.io/f/your-id" method="POST">
-  <div class="row">
-    <div>
-      <label for="name">Name</label>
-      <input id="name" name="name" required>
-    </div>
-    <div>
-      <label for="email">Email</label>
-      <input id="email" name="email" type="email" required>
-    </div>
+  <h1>About Me</h1>
+  <div class="card" style="padding:20px;border:1px solid #00ff7f;border-radius:12px;background:#0a0a0a;box-shadow:0 0 18px rgba(0,255,127,0.1);">
+    <h2>SoundlessEcho</h2>
+    <p><strong>Developer • Modder • Creator of the Predecessor kit</strong></p>
+    <p>I’m a passionate Call of Duty modder and developer focused on pushing the boundaries of GSC scripting.  
+    The <strong>Predecessor</strong> project began as an experimental loader and evolved into a full-featured modding environment —  
+    complete with HUD FX, menu bases, and dynamic UI systems across multiple COD titles.</p>
+    <p>Every release is designed for performance, clarity, and customization — giving modders the freedom to create faster and smarter.</p>
+    <p><strong>Specialties:</strong> GSC Development, HUD FX, Loader Integration, Cross-Title Compatibility, Visual Debug Systems.</p>
+    <p><strong>Community:</strong> Join the official Discord to connect, learn, and collaborate.</p>
+    <p><a href="https://discord.com/invite/WznQZdT" class="btn primary" target="_blank" rel="noopener">Join My Discord</a></p>
   </div>
-  <div class="row-1">
-    <div>
-      <label for="message">Message</label>
-      <textarea id="message" name="message" rows="6" placeholder="What can we help you with?"></textarea>
-    </div>
-  </div>
-  <p><button class="btn primary" type="submit">Send</button></p>
-</form>
-
-<div class="alert">
-  <strong>Discord:</strong> Add your invite link in the footer.<br>
-  <strong>Email:</strong> hello@yourdomain.com
-</div>
-
 </main>
+
 <footer>
   <div class="container">
     <div class="grid">
@@ -68,7 +54,7 @@
       <div>
         <h3>Links</h3>
         <p><a href="downloads.html">Latest Release</a><br>
-           <a href="store.html">Check Product</a><br>
+           <a href="store.html">Store</a><br>
            <a href="showcase.html">Media</a>
         </p>
       </div>
@@ -84,6 +70,7 @@
     <p class="muted">© 2025 Predecessor. All rights reserved.</p>
   </div>
 </footer>
+
 <script src="assets/js/main.js"></script>
 </body>
 </html>
