--- a/showcase.html
+++ b/showcase.html
@@ -46,13 +46,19 @@
   <img src="assets/image/image1.png" alt="Preview 1">
 </div>
 
-  <h1>Developer Kit</h1>
-<p>Multi Call of Duty menu base.</p>
-
 <div class="video-frame" style="margin-bottom:12px">
   <iframe width="100%" height="100%" 
     src="https://www.youtube.com/embed/Yg5CWo80eEw"
     title="Developer Kit Showcase"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen></iframe>
+</div>
+
+  <div class="video-frame" style="margin-bottom:12px">
+  <iframe width="100%" height="100%" 
+    src="https://www.youtube.com/embed/vpr2ML_w6lA"
+    title="ELDEN RING NIGHTREIGN Showcase"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     allowfullscreen></iframe>
